--- a/config.json
+++ b/config.json
@@ -8,17 +8,17 @@
       "type": "function",
       "description": "Clear all terminal output"
     },
-    "status": {
-      "type": "info",
-      "description": "Display system status and connection information"
-    },
-    "scan": {
-      "type": "info",
-      "description": "Scan target system for open ports and vulnerabilities"
+    "news": {
+      "type": "redirect",
+      "url": "https://www.guancha.cn/internation",
+      "description": "Open Guancha International News in new tab",
+      "message": "Redirecting to Guancha International News..."
     },
     "hack": {
-      "type": "info",
-      "description": "Simulate hacking sequence and data extraction"
+      "type": "redirect",
+      "url": "https://news.ycombinator.com/",
+      "description": "Open Hacker News in new tab",
+      "message": "Redirecting to Hacker News..."
     },
     "github": {
       "type": "redirect",
